<resources>

    <!-- String barre de navigation -->
    <string name="action_game"><em>Games</em></string>
    <string name="action_genre"><em>Genre</em></string>
    <string name="action_about"><em>About</em></string>


    <!-- String page d'accueil -->
    <string name="app_name"><strong>GameApp</strong></string>
    <string name="top5"><u>Top 5</u></string>
    <string name="game_top5_1">Numero 1</string>
    <string name="game_top5_2">Numero 2</string>
    <string name="game_top5_3">Numero 3</string>
    <string name="game_top5_4">Numero 4</string>
    <string name="game_top5_5">Numero 5</string>
    <string name="search"><u>Search</u></string>
    <string name="genre">Genre</string>
    <string name="name_typed">Name</string>
    <string name="date_typed">Date</string>
    <string name="nb_etoile">Number of stars</string>
    <string name="price_typed">Price</string>
    <string name="validate">Validate</string>
    <string name="select_gender">Select Genders:</string>

    <!-- String page des jeux -->
    <string name="games"><u>Games</u></string>
    <string name="name_game1">Pacman</string>
    <string name="description_game1">Description du premier jeu</string>
    <string name="action_games">Games</string>
    <string name="date1">28.11.2012</string>
    <string name="name_game2">Mario</string>
    <string name="description_game2">Description du deuxieme jeu</string>
    <string name="date2">13.02.1997</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="add">Add</string>

    <!-- String page activity_about -->
    <string name="infos">GameApp is an application that allows anybody to consult a list of game stored in a database.
                             A search by name or gender
                            can be done to find any game you want.</string>
    <string name="infos2">Every user can add, delete and modify a game, and add or delete a comment on a game.</string>
    <string name="infos3">A search by name or gender can be done to find any game a user want.</string>
    <string name="infos4">If you want to delete a game or a note, just swipe on the right or left. ENJOY.</string>

    <!-- String page detail -->
    <string name="facebook"><a href='http://www.facebook.com/'>Facebook</a></string>
    <string name="twitter"><a href='https://www.twitter.com/'>Twitter</a></string>
    <string name="instagram"><a href='https://www.instagram.com/'>Instagram</a></string>
    <!-- liste de valeur pour la recherche par activity_gender-->
    <string-array name="gender">
        <item>All genders</item>
        <item>Adventure</item>
        <item>Action</item>
        <item>Strategy</item>
        <item>Puzzle</item>
        <item>Sports</item>
    </string-array>

    <!-- liste de valeur pour la recherche nombre d'étoile-->
    <string-array name="nb_etoile">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

<!-- string page d'ajout/modification de jeu -->
    <string name="name">Name of the Game</string>
    <string name="description">Description of the Game</string>
    <string name="image">Path of the image</string>
    <string name="date">Date of the Game</string>

</resources>
