<?xml version="1.0" encoding="utf-8"?>
<!-- Servira de layout pour la page About-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back">


    <TextView
        android:id="@+id/infos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="23dp"
        android:text="@string/infos"/>

    <TextView
        android:id="@+id/infos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/infos"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="25dp"
        android:text="@string/infos2"/>

    <TextView
        android:id="@+id/infos3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/infos2"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="25dp"
        android:text="@string/infos3"/>

    <TextView
        android:id="@+id/infos4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/infos3"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="25dp"
        android:text="@string/infos4"/>



</RelativeLayout>