<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back">


<ImageView
    android:id="@+id/jeu"
    android:layout_width="400dp"
    android:layout_height="340dp"
    android:src="@drawable/gameapp"/>


    <TextView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jeu"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="15dp"
        android:textSize="28dp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/search"></TextView>

    <EditText
        android:id="@+id/name_typed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search"
        android:layout_marginTop="25dp"
        android:textSize="18dp"
        android:hint="@string/name_typed" />

    <Spinner
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_typed"
        android:layout_marginTop="25dp"
        android:textSize="18dp"
        android:hint="@string/genre" />

    <Button
        android:id="@+id/validate"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_below="@+id/gender"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="159dp"
        android:textStyle="bold"
        android:text="@string/validate"
        android:onClick="validateSearch"
        />
</RelativeLayout>