<?xml version="1.0" encoding="utf-8"?>
<!-- Servira de layout pour la page genre-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back">

    <TextView
        android:id="@+id/gender_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="23dp"
        android:text="Gender"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="28dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/gender_select_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gender_title_txt"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:text="@string/select_gender"/>

    <Spinner
        android:id="@+id/gender_select_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gender_select_txt"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:textSize="18dp"
        android:hint="@string/genre"/>

    <Button
        android:id="@+id/select_gender_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gender_select_spinner"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="100dp"
        android:text="@string/search"/>

</RelativeLayout>